(MYFACES-1956) Minor performance improvements for org.apache.myfaces.el, org.apache.myfaces.context and org.apache.myfaces.util ...
Apply many of the findbugs and pmd performance rules